some typo changes

--- a/CA3/project_helper/apssamp.bib
+++ b/CA3/project_helper/apssamp.bib
@@ -4,10 +4,11 @@
 }
 
 
-@BOOK{Ross_97,
-  year 		= 1997,
+@BOOK{Ross_2006,
+  year 		= 2006,
   author 	= {Ross, Sheldon M.},
   title     	= {Introduction to Probability Models},
+  edition 	= {10},
   publisher 	= {Academic Press}
 }
   
